--- a/scripts/www/index.html
+++ b/scripts/www/index.html
@@ -1,88 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./static/css/styles.css" />
-        <meta
-            http-equiv="Content-Security-Policy"
-            content="default-src * 'unsafe-inline' 'unsafe-eval'"
-        />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Tauri App</title>
-        <script src="./static/js/main.js"></script>
-    </head>
-    <body>
-        <main class="container">
-            <h1>Welcome to TauriMan</h1>
-
-            <div class="row">
-                <a
-                    href="https://tauri.app"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    <img
-                        src="./assets/tauri.svg"
-                        class="logo tauri"
-                        alt="Tauri logo"
-                    />
-                </a>
-                <a
-                    href="https://pakeplus.com/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    <img
-                        src="https://hk.gh-proxy.org/https://github.com/Sjj1024/PakePlus/blob/main/app-icon.png"
-                        class="logo vanilla"
-                        alt="JavaScript logo"
-                    />
-                </a>
-            </div>
-            <p>Click to get data</p>
-            <form class="row" id="greet-form">
-                <input id="greet-input" placeholder="Enter a name..." />
-                <button type="submit" id="getdata">GET DATA</button>
-            </form>
-            <div class="functions">
-                <a href="./book.html" target="_self">跳转到book.html</a>
-                <a
-                    href="https://www.baidu.com"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >跳到百度blank
-                </a>
-                <a
-                    href="https://www.baidu.com"
-                    target="_self"
-                    rel="noopener noreferrer"
-                >
-                    跳到百度self
-                </a>
-                <button onclick="sayHello()">点击我</button>
-                <button onclick="sayHello()">下载文件</button>
-                <button onclick="sayHello()">上传文件</button>
-                <button onclick="sayHello()">访问相机</button>
-                <button onclick="sayHello()">访问麦克风</button>
-                <button onclick="sayHello()">访问相册</button>
-                <button class="btn" onclick="openWechat()">打开微信</button>
-                <button class="btn" onclick="openWechatScan()">
-                    打开扫一扫
-                </button>
-                <button class="btn" onclick="openZhihu()">打开知乎</button>
-                <button onclick="sayHello()">打开抖音</button>
-                <button onclick="sayHello()">用浏览器打开</button>
-                <button>打开知乎</button>
-            </div>
-            <p id="greet-msg"></p>
-            <img src="./static/image/cursor.jpeg" alt="logo" />
-            <video
-                src="https://hk.gh-proxy.org/https://github.com/Sjj1024/PakePlus/blob/main/docs/static/videos/pakeplus.mp4"
-                autoplay
-                controls
-                style="width: 100%; height: 100%"
-            ></video>
-            <audio src="./static/music/yin.mp3" controls></audio>
-        </main>
-    </body>
+<html>
+<head>
+<link rel="stylesheet" href=".\css\style.css" />
+<link rel="icon" href=".\image\logo1;1.svg" type="image/svg+xml"/>
+<meta charset="UTF-8">
+<title>Wenhua首页</title>
+</head>
+<body>
+    <div class="navbar">
+        <a href="game.html" class="nav-link">游戏</a>
+        <a href="community.html" class="nav-link">社区</a>
+        <a href="news.html" class="nav-link">新闻</a>
+        <a href="support.html" class="nav-link">支持</a>
+        <img src=".\image\logo.png" class="nav-logo" />
+    </div>
+    <div style="height:6.4vh;"></div>
+    <div class="main">
+        <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=115309889586651&bvid=BV1FKHVzVErr&cid=32814925922&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+        <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=115281301079272&bvid=BV1ZnnozoEPX&cid=32695648844&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+        <div>
+            <center><h1>植物大战僵尸Wenhua</h1></center>
+            <p>植物大战僵尸Wenhua(文华)是一款<b>不收费</b>的PVZ同人游戏作品 ta的<b>玩法丰富</b>引进了诸多其他版本的特点
+            同时制作团队听取玩家的合理意见 积极制作游戏内容为玩家<b>奉献最好的游戏</b>！
+            </p>
+        </div>
+    </div>
+    <div style="height:2vh;"></div>
+    <hr />
+    <div class="footer">
+        <div>
+            <a href="index.html" class="nav-link">首页</a>
+            <a href="game.html" class="nav-link">游戏</a>
+            <a href="community.html" class="nav-link">社区</a>
+            <a href="news.html" class="nav-link">新闻</a>
+            
+            <a href="support.html" class="nav-link">支持</a>
+            <a href="https://space.bilibili.com/3546882143947700" class="nav-link" style="float: right;">bilibili</a>
+        </div>
+        <hr />
+        <div style="height:6.4vh;"></div>
+        <p>(c) 2025 Wenhua. All Rights Reserved</p>
+    </div>
+</body>
 </html>
